create new skills section to place in home page

--- a/index.html
+++ b/index.html
@@ -60,6 +60,108 @@
                 Producer</p>
         </div>
     </header>
+
+    <!-- Skills Grid Items-->
+<!-- Skills Section -->
+<section class="page-section bg-secondary text-white mb-0" id="skills">
+    <div class="container">
+        <!-- Skills Section Heading -->
+        <h2 class="page-section-heading text-center text-uppercase text-white">Skills Set</h2>
+        <!-- Icon Divider -->
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+            <div class="divider-custom-line"></div>
+        </div>
+
+        <!-- Developer Tools -->
+        <div class="row align-items-center mb-5">
+            <h4 class="text-uppercase text-center">Developer Tools</h4>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/html5-logo.png" alt="HTML5 Logo" class="img-fluid">
+                <p>HTML5</p>
+            </div>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/css3-logo.png" alt="CSS3 Logo" class="img-fluid">
+                <p>CSS3</p>
+            </div>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/javascript-logo.png" alt="JavaScript Logo" class="img-fluid">
+                <p>JavaScript</p>
+            </div>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/python-logo.png" alt="Python Logo" class="img-fluid">
+                <p>Python</p>
+            </div>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/django-logo.png" alt="Django Logo" class="img-fluid">
+                <p>Django</p>
+            </div>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/bootstrap-logo.png" alt="Bootstrap Logo" class="img-fluid">
+                <p>Bootstrap</p>
+            </div>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/mysql-logo.png" alt="MySQL Logo" class="img-fluid">
+                <p>MySQL</p>
+            </div>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/postgres-logo.png" alt="Postgres Logo" class="img-fluid">
+                <p>Postgres</p>
+            </div>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/git-logo.png" alt="Git Logo" class="img-fluid">
+                <p>Git & GitHub</p>
+            </div>
+        </div>
+
+        <!-- Marketing Tools -->
+        <div class="row align-items-center mb-5">
+            <h4 class="text-uppercase text-center">Marketing Tools</h4>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/semrush-logo.png" alt="SEMrush Logo" class="img-fluid">
+                <p>SEMrush</p>
+            </div>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/screamingfrog-logo.png" alt="Screaming Frog Logo" class="img-fluid">
+                <p>Screaming Frog</p>
+            </div>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/moz-logo.png" alt="Moz Logo" class="img-fluid">
+                <p>Moz</p>
+            </div>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/wordpress-logo.png" alt="WordPress Logo" class="img-fluid">
+                <p>WordPress</p>
+            </div>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/canva-logo.png" alt="Canva Logo" class="img-fluid">
+                <p>Canva</p>
+            </div>
+        </div>
+
+        <!-- Content Production Tools -->
+        <div class="row align-items-center">
+            <h4 class="text-uppercase text-center">Content Production Tools</h4>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/davinci-logo.png" alt="Davinci Resolve Logo" class="img-fluid">
+                <p>Davinci Resolve</p>
+            </div>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/adobe-premiere-logo.png" alt="Adobe Premiere Logo" class="img-fluid">
+                <p>Adobe Premiere</p>
+            </div>
+            <div class="col-6 col-md-4 text-center">
+                <img src="path/to/photoshop-logo.png" alt="Photoshop Logo" class="img-fluid">
+                <p>Photoshop</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+  
+
     <!-- Portfolio Section-->
     <section class="page-section portfolio" id="portfolio">
         <div class="container">
