add logo images

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="row align-items-center mb-5">
             <h4 class="text-uppercase text-center">Developer Tools</h4>
             <div class="col-6 col-md-4 text-center">
-                <img src="path/to/html5-logo.png" alt="HTML5 Logo" class="img-fluid">
+                <img src="assets/img/logos/html.png" alt="HTML5 Logo" class="img-fluid">
                 <p>HTML5</p>
             </div>
             <div class="col-6 col-md-4 text-center">
