--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
 
         <!-- Developer Tools -->
-        <div class="row align-items-center mb-5">
+        <!-- <div class="row align-items-center mb-5">
             <h4 class="text-uppercase text-center">Developer Tools</h4>
             <div class="col-6 col-md-4 text-center">
                 <img src="assets/img/logos/html.png" alt="HTML5 Logo" class="img-fluid">
@@ -113,7 +113,67 @@
                 <img src="path/to/git-logo.png" alt="Git Logo" class="img-fluid">
                 <p>Git & GitHub</p>
             </div>
-        </div>
+        </div> -->
+
+        <!-- Developer Tools -->
+<div class="row align-items-center mb-5">
+    <h4 class="text-uppercase text-center">Developer Tools</h4>
+
+    <!-- HTML5 -->
+    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+        <img src="assets/img/logos/html.png" alt="HTML5 Logo" class="logo-size">
+        <p>HTML5</p>
+    </div>
+
+    <!-- CSS3 -->
+    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+        <img src="assets/img/logos/css-3.png" alt="CSS3 Logo" class=" logo-size">
+        <p>CSS3</p>
+    </div>
+
+    <!-- JavaScript -->
+    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+        <img src="assets/img/logos/js.png" alt="JavaScript Logo" class="logo-size">
+        <p>JavaScript</p>
+    </div>
+
+    <!-- Python -->
+    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+        <img src="assets/img/logos/python.png" alt="Python Logo" class="logo-size">
+        <p>Python</p>
+    </div>
+
+    <!-- Django -->
+    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+        <img src="assets/img/logos/django.png" alt="Django Logo" class="logo-size">
+        <p>Django</p>
+    </div>
+
+    <!-- Bootstrap -->
+    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+        <img src="assets/img/logos/bootstrap.png" alt="Bootstrap Logo" class="logo-size">
+        <p>Bootstrap</p>
+    </div>
+
+    <!-- MySQL -->
+    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+        <img src="assets/img/logos/mysql.png" alt="MySQL Logo" class="logo-size">
+        <p>MySQL</p>
+    </div>
+
+    <!-- Postgres -->
+    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+        <img src="assets/img/logos/postgres.png" alt="Postgres Logo" class="logo-size">
+        <p>Postgres</p>
+    </div>
+
+    <!-- Git & GitHub -->
+    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+        <img src="assets/img/logos/github.png" alt="Git Logo" class="logo-size">
+        <p>Git & GitHub</p>
+    </div>
+</div>
+
 
         <!-- Marketing Tools -->
         <div class="row align-items-center mb-5">
