--- a/index.html
+++ b/index.html
@@ -62,165 +62,174 @@
     </header>
 
     <!-- Skills Grid Items-->
-<!-- Skills Section -->
-<section class="page-section bg-secondary text-white mb-0" id="skills">
-    <div class="container">
-        <!-- Skills Section Heading -->
-        <h2 class="page-section-heading text-center text-uppercase text-white">Skills Set</h2>
-        <!-- Icon Divider -->
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-            <div class="divider-custom-line"></div>
-        </div>
+    <!-- Skills Section -->
+    <section class="page-section bg-secondary text-white mb-0" id="skills">
+        <div class="container">
+            <!-- Skills Section Heading -->
+            <h2 class="page-section-heading text-center text-uppercase text-white">Skills Set</h2>
+            <!-- Icon Divider -->
+            <div class="divider-custom divider-light">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
 
-        <!-- Developer Tools -->
-        <!-- <div class="row align-items-center mb-5">
+            <!-- Developer Tools -->
+            <!-- <div class="row align-items-center mb-5">
             <h4 class="text-uppercase text-center">Developer Tools</h4>
-            <div class="col-6 col-md-4 text-center">
+            <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
                 <img src="assets/img/logos/html.png" alt="HTML5 Logo" class="img-fluid">
                 <p>HTML5</p>
             </div>
-            <div class="col-6 col-md-4 text-center">
+            <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
                 <img src="path/to/css3-logo.png" alt="CSS3 Logo" class="img-fluid">
                 <p>CSS3</p>
             </div>
-            <div class="col-6 col-md-4 text-center">
+            <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
                 <img src="path/to/javascript-logo.png" alt="JavaScript Logo" class="img-fluid">
                 <p>JavaScript</p>
             </div>
-            <div class="col-6 col-md-4 text-center">
+            <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
                 <img src="path/to/python-logo.png" alt="Python Logo" class="img-fluid">
                 <p>Python</p>
             </div>
-            <div class="col-6 col-md-4 text-center">
+            <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
                 <img src="path/to/django-logo.png" alt="Django Logo" class="img-fluid">
                 <p>Django</p>
             </div>
-            <div class="col-6 col-md-4 text-center">
+            <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
                 <img src="path/to/bootstrap-logo.png" alt="Bootstrap Logo" class="img-fluid">
                 <p>Bootstrap</p>
             </div>
-            <div class="col-6 col-md-4 text-center">
+            <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
                 <img src="path/to/mysql-logo.png" alt="MySQL Logo" class="img-fluid">
                 <p>MySQL</p>
             </div>
-            <div class="col-6 col-md-4 text-center">
+            <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
                 <img src="path/to/postgres-logo.png" alt="Postgres Logo" class="img-fluid">
                 <p>Postgres</p>
             </div>
-            <div class="col-6 col-md-4 text-center">
+            <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
                 <img src="path/to/git-logo.png" alt="Git Logo" class="img-fluid">
                 <p>Git & GitHub</p>
             </div>
         </div> -->
 
-        <!-- Developer Tools -->
-<div class="row align-items-center mb-5">
-    <h4 class="text-uppercase text-center">Developer Tools</h4>
+            <!-- Developer Tools -->
+            <div class="row align-items-center mb-5">
+                <h4 class="text-uppercase text-center">Developer Tools</h4>
 
-    <!-- HTML5 -->
-    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
-        <img src="assets/img/logos/html.png" alt="HTML5 Logo" class="logo-size">
-        <p>HTML5</p>
-    </div>
+                <!-- HTML5 -->
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/html.png" alt="HTML5 Logo" class="logo-size">
+                    <p>HTML5</p>
+                </div>
 
-    <!-- CSS3 -->
-    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
-        <img src="assets/img/logos/css-3.png" alt="CSS3 Logo" class=" logo-size">
-        <p>CSS3</p>
-    </div>
+                <!-- CSS3 -->
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/css-3.png" alt="CSS3 Logo" class=" logo-size">
+                    <p>CSS3</p>
+                </div>
 
-    <!-- JavaScript -->
-    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
-        <img src="assets/img/logos/js.png" alt="JavaScript Logo" class="logo-size">
-        <p>JavaScript</p>
-    </div>
+                <!-- JavaScript -->
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/js.png" alt="JavaScript Logo" class="logo-size">
+                    <p>JavaScript</p>
+                </div>
 
-    <!-- Python -->
-    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
-        <img src="assets/img/logos/python.png" alt="Python Logo" class="logo-size">
-        <p>Python</p>
-    </div>
+                <!-- Python -->
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/python.png" alt="Python Logo" class="logo-size">
+                    <p>Python</p>
+                </div>
 
-    <!-- Django -->
-    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
-        <img src="assets/img/logos/django.png" alt="Django Logo" class="logo-size">
-        <p>Django</p>
-    </div>
+                <!-- Django -->
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/django.png" alt="Django Logo" class="logo-size">
+                    <p>Django</p>
+                </div>
 
-    <!-- Bootstrap -->
-    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
-        <img src="assets/img/logos/bootstrap.png" alt="Bootstrap Logo" class="logo-size">
-        <p>Bootstrap</p>
-    </div>
+                <!-- Bootstrap -->
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/bootstrap.png" alt="Bootstrap Logo" class="logo-size">
+                    <p>Bootstrap</p>
+                </div>
 
-    <!-- MySQL -->
-    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
-        <img src="assets/img/logos/mysql.png" alt="MySQL Logo" class="logo-size">
-        <p>MySQL</p>
-    </div>
+                <!-- MySQL -->
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/mysql.png" alt="MySQL Logo" class="logo-size">
+                    <p>MySQL</p>
+                </div>
 
-    <!-- Postgres -->
-    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
-        <img src="assets/img/logos/postgres.png" alt="Postgres Logo" class="logo-size">
-        <p>Postgres</p>
-    </div>
+                <!-- Postgres -->
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/postgres.png" alt="Postgres Logo" class="logo-size">
+                    <p>Postgres</p>
+                </div>
 
-    <!-- Git & GitHub -->
-    <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
-        <img src="assets/img/logos/github.png" alt="Git Logo" class="logo-size">
-        <p>Git & GitHub</p>
-    </div>
-</div>
-
-
-        <!-- Marketing Tools -->
-        <div class="row align-items-center mb-5">
-            <h4 class="text-uppercase text-center">Marketing Tools</h4>
-            <div class="col-6 col-md-4 text-center">
-                <img src="path/to/semrush-logo.png" alt="SEMrush Logo" class="img-fluid">
-                <p>SEMrush</p>
+                <!-- Git & GitHub -->
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/github.png" alt="Git Logo" class="logo-size">
+                    <p>Git & GitHub</p>
+                </div>
             </div>
-            <div class="col-6 col-md-4 text-center">
-                <img src="path/to/screamingfrog-logo.png" alt="Screaming Frog Logo" class="img-fluid">
-                <p>Screaming Frog</p>
+
+
+            <!-- Marketing Tools -->
+            <div class="row align-items-center mb-5">
+                <h4 class="text-uppercase text-center">Marketing Tools</h4>
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/semrush.png" alt="SEMrush Logo" class="logo-size">
+                    <p>SEMrush</p>
+                </div>
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/sfrog.png" alt="Screaming Frog Logo" class="logo-size">
+                    <p>Screaming Frog</p>
+                </div>
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/moz.png" alt="Moz Logo" class="logo-size">
+                    <p>Moz</p>
+                </div>
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/wordpress.png" alt="WordPress Logo" class="logo-size">
+                    <p>WordPress</p>
+                </div>
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/adwords.png" alt="Google ads logo" class="logo-size">
+                    <p>Google Ads</p>
+                </div>
             </div>
-            <div class="col-6 col-md-4 text-center">
-                <img src="path/to/moz-logo.png" alt="Moz Logo" class="img-fluid">
-                <p>Moz</p>
+
+            <!-- Content Production Tools -->
+            <div class="row align-items-center">
+                <h4 class="text-uppercase text-center">Content Production Tools</h4>
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/davinci.png" alt="Davinci Resolve Logo" class="logo-size">
+                    <p>Davinci Resolve</p>
+                </div>
+
+
+
+                
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/premiere.png" alt="Adobe Premiere Logo" class="logo-size">
+                    <p>Adobe Premiere</p>
+                </div>
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/photoshop.png" alt="Photoshop Logo" class="logo-size">
+                    <p>Photoshop</p>
+                </div>
+                <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
+                    <img src="assets/img/logos/canva.png" alt="Canva Logo" class="logo-size">
+                    <p>Canva</p>
+                </div>
             </div>
-            <div class="col-6 col-md-4 text-center">
-                <img src="path/to/wordpress-logo.png" alt="WordPress Logo" class="img-fluid">
-                <p>WordPress</p>
-            </div>
-            <div class="col-6 col-md-4 text-center">
-                <img src="path/to/canva-logo.png" alt="Canva Logo" class="img-fluid">
-                <p>Canva</p>
-            </div>
+
         </div>
-
-        <!-- Content Production Tools -->
-        <div class="row align-items-center">
-            <h4 class="text-uppercase text-center">Content Production Tools</h4>
-            <div class="col-6 col-md-4 text-center">
-                <img src="path/to/davinci-logo.png" alt="Davinci Resolve Logo" class="img-fluid">
-                <p>Davinci Resolve</p>
-            </div>
-            <div class="col-6 col-md-4 text-center">
-                <img src="path/to/adobe-premiere-logo.png" alt="Adobe Premiere Logo" class="img-fluid">
-                <p>Adobe Premiere</p>
-            </div>
-            <div class="col-6 col-md-4 text-center">
-                <img src="path/to/photoshop-logo.png" alt="Photoshop Logo" class="img-fluid">
-                <p>Photoshop</p>
-            </div>
-        </div>
-    </div>
-</section>
+    </section>
 
 
-  
+
 
     <!-- Portfolio Section-->
     <section class="page-section portfolio" id="portfolio">
@@ -341,7 +350,7 @@
                     </p>
                     <a class="read-more-link text-white" onclick="toggleReadMore()">Read more</a>
                 </div>
-              
+
             </div>
             <!-- About Section Button-->
             <div class="text-center mt-4">
