updated home page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <header class="masthead bg-primary text-white text-center">
         <div class="container d-flex align-items-center flex-column">
             <!-- Masthead Avatar Image-->
-            <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." />
+            <img class="masthead-avatar mb-5" src="assets/img/profile4.png" alt="..." />
             <!-- Masthead Heading-->
             <h1 class="masthead-heading text-uppercase mb-0">Hola! my name is Juan Fernando</h1>
             <!-- Icon Divider-->
@@ -117,7 +117,7 @@
 
             <!-- Developer Tools -->
             <div class="row align-items-center mb-5">
-                <h4 class="text-uppercase text-center">Developer Tools</h4>
+                <h4 class="text-uppercase text-center" style="margin-bottom: 20px;">Developer Tools</h4>
 
                 <!-- HTML5 -->
                 <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
@@ -177,7 +177,7 @@
 
             <!-- Marketing Tools -->
             <div class="row align-items-center mb-5">
-                <h4 class="text-uppercase text-center">Marketing Tools</h4>
+                <h4 class="text-uppercase text-center" style="margin-bottom: 20px;">Marketing Tools</h4>
                 <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
                     <img src="assets/img/logos/semrush.png" alt="SEMrush Logo" class="logo-size">
                     <p>SEMrush</p>
@@ -202,7 +202,7 @@
 
             <!-- Content Production Tools -->
             <div class="row align-items-center">
-                <h4 class="text-uppercase text-center">Content Production Tools</h4>
+                <h4 class="text-uppercase text-center" style="margin-bottom: 20px;">Content Production Tools</h4>
                 <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
                     <img src="assets/img/logos/davinci.png" alt="Davinci Resolve Logo" class="logo-size">
                     <p>Davinci Resolve</p>
@@ -210,7 +210,7 @@
 
 
 
-                
+
                 <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
                     <img src="assets/img/logos/premiere.png" alt="Adobe Premiere Logo" class="logo-size">
                     <p>Adobe Premiere</p>
@@ -229,8 +229,6 @@
     </section>
 
 
-
-
     <!-- Portfolio Section-->
     <section class="page-section portfolio" id="portfolio">
         <div class="container">
@@ -244,6 +242,22 @@
             </div>
             <!-- Portfolio Grid Items-->
             <div class="row justify-content-center">
+
+                <!-- optional 1 -->
+                <!-- Amigo Blog -->
+                <div class="col-md-6 col-lg-4 mb-5">
+                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
+                        <div
+                            class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="assets/img/portfolio/quiz-2.png" alt="Amigo Blog" />
+                    </div>
+                </div>
+
+
                 <!-- Portfolio Item 1-->
                 <div class="col-md-6 col-lg-4 mb-5">
                     <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
