--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <div class="row justify-content-center">
 
                 <!-- optional 1 -->
-                <!-- Amigo Blog -->
+                <!-- Quiz Frenzy -->
                 <div class="col-md-6 col-lg-4 mb-5">
                     <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
                         <div
@@ -253,20 +253,20 @@
                                 <i class="fas fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/quiz-2.png" alt="Amigo Blog" />
+                        <img class="img-fluid" src="assets/img/portfolio/quiz-2.png" alt="quiz_frenzy" />
                     </div>
                 </div>
 
 
-                <!-- Portfolio Item 1-->
+                <!-- Portfolio Item 2-->
                 <div class="col-md-6 col-lg-4 mb-5">
-                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
+                    <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal2">
                         <div
                             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/amigo_blog1.png" alt="..." />
                     </div>
                 </div>
                 <!-- Portfolio Item 2-->
@@ -534,9 +534,12 @@
                                     assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam
                                     velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
                                 </p>
-                                <button class="btn btn-primary" data-bs-dismiss="modal">
-                                    <i class="fas fa-xmark fa-fw"></i>
-                                    Close Window
+
+                                <a href="https://github.com/CrazyEggz/ci-hackthon2-quiz-frenzy" target="_blank" class="btn btn-primary">
+                                    GitHub 
+                                </a>
+                                
+                            
                                 </button>
                             </div>
                         </div>
@@ -556,7 +559,7 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <!-- Portfolio Modal - Title-->
+                                <!-- Portfolio Modal - Amigo blog-->
                                 <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tasty Cake</h2>
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
@@ -564,17 +567,22 @@
                                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                     <div class="divider-custom-line"></div>
                                 </div>
-                                <!-- Portfolio Modal - Image-->
-                                <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="..." />
+                                   <!-- Portfolio Modal - Video-->
+                                   <div class="video-container">
+                                    <video class="video-fluid" controls>
+                                        <source src="assets/video/amigo-blog.mp4" type="video/mp4" />
+                                        Your browser does not support the video tag.
+                                    </video>
+                                </div>
+
                                 <!-- Portfolio Modal - Text-->
                                 <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque
                                     assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam
                                     velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
                                 </p>
-                                <button class="btn btn-primary" data-bs-dismiss="modal">
-                                    <i class="fas fa-xmark fa-fw"></i>
-                                    Close Window
-                                </button>
+                                <a href="https://github.com/juanchitopimo/Amigo-Blog-final" target="_blank" class="btn btn-primary">
+                                    GitHub 
+                                </a>
                             </div>
                         </div>
                     </div>
