--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading-->
-            <p class="masthead-subheading font-weight-light mb-0">Junior Developer - Marketing Strategies - Content
+            <p class="masthead-subheading font-weight-light mb-0">Junior Developer - Digital Marketing Strategies -
+                Content
                 Producer</p>
         </div>
     </header>
@@ -105,9 +106,10 @@
 
                 <!-- Django -->
                 <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
-                    <img src="assets/img/logos/django.png" alt="Django Logo" class="logo-size">
+                    <img src="assets/img/logos/django2.png" alt="Django Logo" class="logo-size django-logo">
                     <p>Django</p>
                 </div>
+
 
                 <!-- Bootstrap -->
                 <div class="col-6 col-md-4 col-lg-3 text-center mb-4">
